renamed, replaced icons, added history and remove history button

--- a/AndroidApp_GestureDetector/app/build.gradle
+++ b/AndroidApp_GestureDetector/app/build.gradle
@@ -8,7 +8,7 @@ assert file(project.ext.ASSET_DIR + "/labels.txt").exists()
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "org.tensorflow.lite.examples.classification"
+        applicationId "xyz.gesturedetector.app"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
